testsuite/tests/properties/invalid_prop_args/less_args.lkt
import common

class BarNode: BarCode {
    fun base_prop(): Int = 12
}
